Fix Vulkan rendering and JS mesh generation